Fixed buttons align.

--- a/html-css-course/intro-to-html/lessons/10/10b.css
+++ b/html-css-course/intro-to-html/lessons/10/10b.css
@@ -18,6 +18,7 @@
     height: 100px;
     object-fit: cover;
     border-radius: 50%;
+    cursor: pointer;
 }
 
 .info-profile-preview {
@@ -25,17 +26,17 @@
     vertical-align: middle;
     line-height: 8px;
     font-size: 14px;
+    width: 300px;
+
 }
 
 .job {
     font-weight: bold;
-    padding-right: 100px;
 }
 
 .hobby,
 .city {
     color: rgb(96, 96, 96);
-    padding-right: 100px;
 }
 
 .follow-profile-preview {
@@ -53,4 +54,5 @@
     background-color: rgb(57, 131, 241);
     border: none;
     border-radius: 4px;
+    cursor: pointer;
 }
