--- a/html-css-course/intro-to-html/lessons/10/10e.css
+++ b/html-css-course/intro-to-html/lessons/10/10e.css
@@ -51,6 +51,7 @@
     padding-bottom: 8px;
     margin-left: 10px;
     margin-bottom: 10px;
+    cursor: pointer;
 
     color: white;
     background-color: rgb(66, 103, 178);
